--- a/site-flask-mustache/www/css/index-light.css
+++ b/site-flask-mustache/www/css/index-light.css
@@ -6,12 +6,16 @@
   --lightmode-colour-green-rich: #69B884;
   --lightmode-colour-yellow-pale: #F5F4B0;
   --lightmode-colour-yellow-pale-alt: #FEFED0;
+  --lightmode-colour-blue-light: #8BE9FD;
+  --lightmode-colour-teal-dark: #2BAEAC;
+  --lightmode-colour-teal: #3BCECC;
+  --lightmode-colour-pink: #FF79C6;
+  --lightmode-colour-pink-dark: #FF39A6;
   --lightmode-colour-brown: #A6511C;
   --lightmode-colour-brown-lite: #FA9966;
   --lightmode-colour-brown-lite-alt: #FAC966;
   --lightmode-colour-brown-lite-alt-alt: #FCD986;
 }
-
 
 html.darkonlight {
   background-image: url("/img/plants_pineapple_00_plain.svg");
